--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
@@ -3,6 +3,7 @@
 @import "theme/partials/layout/article_templates/cta_article_layout_template";
 @import "theme/partials/layout/article_templates/contact_article_layout_template";
 @import "theme/partials/layout/article_templates/core_layout_template";
+@import "theme/partials/layout/article_templates/why-me_article_layout_template";
 
 @import "theme/partials/layout/modules/my_value_page_header_module";
 @import "theme/partials/layout/modules/capabilities_table_module";
