--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_category_history_customization.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_category_history_customization.scss
@@ -23,12 +23,12 @@
     filter: none;
 }
 
-.why-me__categories_content:nth-child(odd){
-img{
-    filter: brightness(80%);
+// .why-me__categories_content:nth-child(odd){
+// img{
+//     filter: brightness(80%);
 
-}
-}
+// }
+// }
 
 
 
