--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_expt_overlay_article_customization.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_expt_overlay_article_customization.scss
@@ -176,14 +176,9 @@ padding-right: 0;
     @include make-row();
     @include rows();
     align-items: center;
-    .overlay__content--icon{
-                margin-right: 1rem;
-                @include mq('tablet'){
-                margin-right: 2%;
-    }
 
 }
-}
+
 
 .overlay__content--icon{
     @include make-col-ready();
@@ -192,6 +187,7 @@ padding-right: 0;
     padding-right: 0;
     @include mq('tablet'){
     @include make-col(2);
+    margin-right: 2%;
     @include vr($padding: 1, $width: 6);
     }
 }
@@ -213,7 +209,8 @@ margin-left: 19%;
 
    li{
         @include make-col-ready();
-        @include make-col(6);
+        width: 47%;
+        max-width: 47%;
         @include mq('tablet'){
             @include vr($font-size: 1, $line-height: 2);
         }
@@ -267,407 +264,6 @@ h5{
         list-style: none;
         padding-left: 0;
         text-indent: 0;
+        margin-left: 16.6%;
     }
 }
-
-
-
-
-// #webdev {
-//     align-items: center;
-//     display: flex;
-//     height: 100vh;
-//     overflow: hidden;
-//     position: relative;
-// }
-/* 
-.webdev-sub-panel {
-    .webdev-icon {
-        @include make-col(3);
-        @include make-col-ready;
-    }
-
-    .style-svg {
-        fill: $primary;
-        width: 8rem;
-
-            width: 6rem;
-        @include media-breakpoint-up(sm) {
-        }
-    }
-
-    .expt-row {
-        h5 {
-            padding: $ms--9 0;
-            color: $primary;
-            font-weight: 400;
-            letter-spacing: .09rem;
-            margin-bottom: 0;
-            text-transform: capitalize;
-        }
-  line-height: $ms-2;
-
-        hr {
-            border: thin solid $primary;
-            width: 90%;
-
-          
-        }
-
-        align-items: stretch;
-        display: flex;
-        justify-content: space-around;
-
-            height: 315vh;
-        @include media-breakpoint-up(lg) {
-
-            // align-items: center;
-        }
-    }
-
-    .row {
-        // margin-bottom: $rvr-2;
-        align-items: baseline;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .webdev-row-head {
-        // background: $primary;
-        // border-radius: 1em;
-
-        max-width: 70%;
-
-        // margin-bottom: $rvr-1;
-        text-align: center;
-    }
-
-    .expt-vert {
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-
-            height: 315vh;
-        }
-    }
-
-    .expt-block {
-        @include make-col(12);
-        @include make-col-ready;
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            float: right;
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-
-            height: 325vh;
-
-            // margin-top: $rvr-3;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-    }
-
-    .expt-block .row + .row {
-        margin-top: $rvr-7;
-        display: flex;
-        justify-content: center;
-
-            max-width: 90%;
-        @include media-breakpoint-up(lg) {
-        }
-    }
-
-    .expt-box {
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            .expt-text {
-            }
-         max-width: $ms-10_5;
-        }
-    }
-} */
-
-
-// ==========================================================================
-// ==========================================================================
-// Marketing Sub Panel
-/* 
-.expt-row {
-    align-items: stretch;
-    display: flex;
-    justify-content: space-around;
-}
-
-.expt-block {
-    align-content: center;
-
-        @include make-col(12);
-        @include make-col-ready;
-    @include media-breakpoint-up(sm) {
-    }
-
-
-        @include make-col(12);
-        @include make-col-ready;
-    @include media-breakpoint-up(md) {
-    }
-
-
-        @include make-col(7);
-        @include make-col-ready;
-    @include media-breakpoint-up(lg) {
-    }
-
-
-        @include make-col(7);
-        @include make-col-ready;
-    @include media-breakpoint-up(xl) {
-    }
-}
-
-.expt-box {
-    @include make-col(6);
-    @include make-col-ready;
-
-        @include make-col(6);
-        @include make-col-ready;
-    @include media-breakpoint-up(md) {
-
-        .expt-text {
-            max-width: $ms-10_5;
-        }
-    }
-
-
-        @include make-col(6);
-        @include make-col-ready;
-    @include media-breakpoint-up(lg) {
-    }
-
-
-        @include make-col(6);
-        @include make-col-ready;
-    @include media-breakpoint-up(xl) {
-    }
-}
-
-.expt-vert {
-    @include make-col(12);
-    @include make-col-ready;
-
-    @include media-breakpoint-up(sm) {}
-
-
-    @include media-breakpoint-up(md) {}
-
-
-        @include make-col(4);
-        @include make-col-ready;
-    @include media-breakpoint-up(lg) {
-    }
-
-
-        @include make-col(4);
-        @include make-col-ready;
-    @include media-breakpoint-up(xl) {
-    }
-}
-
- */
-/* 
-// ==========================================================================
-// ==========================================================================
-// Marketing Communications Sub Panel
-.marcom-sub-panel {
-    .expt-row {
-        align-items: stretch;
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .expt-block {
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(8);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            .expt-text {
-               max-width: $ms-10;
-            }
-        }
-
-
-            @include make-col(7);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(7);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-
-    .expt-box {
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            .expt-text {
-               max-width: $ms-10_5;
-            }
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-
-    .expt-vert {
-    
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-
-    .expt-block {
-        align-content: center;
-
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(7);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            .expt-text {
-              max-width: $ms-10;
-            }
-        }
-
-
-            @include make-col(7);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(7);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-
-    .expt-box {
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-
-            .expt-text {
-            }
-        }
-     max-width: $ms-10_5;
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(6);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-
-    .expt-vert {
-            @include make-col(12);
-            @include make-col-ready;
-        @include media-breakpoint-up(sm) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(md) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(lg) {
-        }
-
-
-            @include make-col(4);
-            @include make-col-ready;
-        @include media-breakpoint-up(xl) {
-        }
-    }
-}
- */
