--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_templates/_splash_article_layout_template.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_templates/_splash_article_layout_template.scss
@@ -32,10 +32,11 @@
 
     }
     .link{
-    	position: absolute;
-      bottom: 20rem;
-      left: 50%;
+       position: absolute;
+  flex: 0 0 0;
+  left: 50%;
+  bottom: 6em;
 
-  flex: .25 0 auto;
     }
+
 }
