--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_articles_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_articles_styles.scss
@@ -32,18 +32,9 @@
         bottom: -12rem;
     }
 
-    .container-hero__img--mobile {
-        margin-top: 4rem;
-
-        @include mq("tablet-wide") {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-        }
-    }
 
     @include mq("tablet-wide") {
-        height: 60vh;
+   
         width: 99rem;
         max-width: 99rem;
     }
@@ -52,7 +43,6 @@
     @include mq("desktop") {
         width: 100%;
         max-width: 100%;
-        height: 100vh;
     }
 }
 
@@ -88,8 +78,6 @@
 
     @include mq("desktop") {
         width: 148.5rem;
-        height: 100vh;
-
         @include push-middle;
 
         padding-bottom: 20rem;
@@ -171,8 +159,8 @@
     .link {
         /* flex: 0 0 auto;
         position: relative; */
-        bottom: 10rem;
-        left: 50%;
+//         bottom: 10rem;
+//         left: 50%;
     }
 
     h1 {
@@ -275,7 +263,7 @@
         width: 100%;
     }
 
-    .content1 {
+   #howidoit__content1 {
         order: 2;
         background: $primary;
         color: $white;
@@ -295,23 +283,7 @@
             /*             margin-bottom: 1px; */
         }
 
-        .quote {
-            @include vr($font-size: 4, $line-height: 1);
 
-            position: relative;
-            color: rgba($black, .1);
-        }
-
-        #quote__open {
-            line-height: 4rem;
-            margin-top: 1rem;
-        }
-
-        #quote__close {
-            line-height: 0rem;
-            margin-top: 4rem;
-            float: right;
-        }
     }
 
     .content2 {
@@ -335,13 +307,8 @@
 
     @include flush-left;
 
-    .howidoit__disciplines {}
 
-    .howidoit__disciplines_content {
-        display: inline-flex;
-        align-items: center;
-        margin-bottom: 3rem;
-    }
+
 
     h5 {
         @extend %figure-head-lg;
@@ -366,12 +333,7 @@
         max-width: 18em;
     }
 
-    .disciplines__content-icon {
-        padding-right: 2rem;
-        width: 20%;
-        max-width: 20%;
-        flex: 0 0 auto;
-    }
+
 
     @include mq("phone-wide") {
         /*         h1 {
@@ -414,7 +376,10 @@
         flex-direction: column;
 
         .page-head__howidoit {
-            display: none;
+               width: 80%;
+            max-width: 80%;
+            @include push-auto();
+            /* display: none; */
 
             /*  @include make-col-ready();
             @include make-col(3);
@@ -425,6 +390,11 @@
             padding: 2rem;
             color: #fff; */
         }
+        #title-col{
+            display: none;
+        }
+        
+
 
         .content-container {
             @include make-col-ready;
@@ -446,7 +416,122 @@
             /*       width: 50%;
             max-width: 50%; */
         }
+   
+        h5 {
+            @include vr($font-size: 1, $margin-top: 0, $line-height: 1.5);
+            text-align: center;
+        }
 
+        p {
+            display: none;
+        }
+    }
+
+
+    @include mq("desktop") {
+        h3, h4 {
+            margin-left: 0;
+            margin-right: 0;
+        }
+        #title-col{ 
+        h2{
+         @include vr($font-size: 3, $line-height: 2);
+                }
+        %subhead{
+            @include vr($font-size: 1, $line-height: 1.5);
+        }
+    }
+        h4 {
+            @include vr($width: 50);
+        }
+
+        .content-container {
+            @include flush-cols-left;
+
+            flex-direction: column;
+            width: 100%;
+            max-width: 100%;
+
+            .content2 {
+                @include make-row;
+
+                width: 100%;
+                max-width: 100%;
+                flex: 0 0 auto;
+            }
+
+
+            .content1 {
+                /*  margin-left: auto; */
+                background: none;
+
+                h4 {
+                    @include vr($font-size: 1);
+
+                    width: unset;
+                    letter-spacing: 0;
+                }
+
+                .quote {
+                    display: none;
+                }
+            }
+
+
+
+            h5 {
+                @include vr($font-size: 1, $line-height: 1.25);
+            }
+
+            p {
+                @include vr($font-size: 1, $margin-top: 0.75, $line-height: 1.25);
+
+                font-style: normal;
+                letter-spacing: 0;
+                padding-right: 1.5rem;
+            }
+        }
+    }
+}
+
+
+
+
+        .quote {
+            @include vr($font-size: 4, $line-height: 1);
+
+            position: relative;
+            color: rgba($black, .1);
+        }
+
+        #quote__open {
+            line-height: 4rem;
+            margin-top: 1rem;
+        }
+
+        #quote__close {
+            line-height: 0rem;
+            margin-top: 4rem;
+            float: right;
+        }
+
+        .howidoit__disciplines_content {
+        display: inline-flex;
+        align-items: center;
+        margin-bottom: 3rem;
+    }
+
+        .disciplines__content-icon {
+        padding-right: 2rem;
+        width: 20%;
+        max-width: 20%;
+        flex: 0 0 auto;
+    }
+
+
+
+
+ @include mq("tablet-wide") {
         .howidoit__disciplines {
             @include make-row;
 
@@ -468,31 +553,12 @@
             margin-bottom: 0;
         }
 
-        .howidoit__disciplines_content:hover {
-            background: $tungsten;
-            cursor: pointer;
-
-            &,
-            & .cls-4, .cls-3, .cls-1 {
-                fill: #111;
-            }
-        }
 
         .disciplines__content-icon {
             width: 70%;
             max-width: 80%;
             padding: 0;
         }
-
-        h5 {
-            margin-top: -2rem;
-            text-align: center;
-        }
-
-        p {
-            display: none;
-        }
-    }
 
 
     #col-offset {
@@ -513,32 +579,66 @@
         width: 100%;
         margin: 0;
     }
+}
 
-    @include mq("desktop") {
-        h3, h4 {
-            margin-left: 0;
-            margin-right: 0;
-        }
-
-        h4 {
-            @include vr($width: 50);
-        }
-
-        .content-container {
-            @include flush-cols-left;
-
-            flex-direction: column;
-            width: 100%;
-            max-width: 100%;
-
-            .content2 {
+   @include mq("desktop") {
+            .howidoit__disciplines {
+                display: flex;
                 @include make-row;
-
-                width: 100%;
-                max-width: 100%;
-                flex: 0 0 auto;
+                width: 80%;
+                max-width: 80%;
+                margin: 0 auto;
             }
 
+            .howidoit__disciplines_content {
+                 @include make-col-ready();
+                     width: 18%;
+                max-width: 18%;
+                padding-left: 0px;
+                padding-right: 0px;
+                display: flex;
+                flex-direction: column;
+                flex: 0 0 auto;
+                align-items: normal;
+                // justify-content: flex-start;
+                letter-spacing: 0; 
+            }
+
+            #title-col{
+
+            }
+
+            .howidoit__disciplines_arrow{
+                @include make-col-ready();
+                width: 2%;
+                max-width: 2%;
+                padding-left: 0px;
+                padding-right: 0px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                font-size: 3em;
+            } 
+/*             #title-col{
+    margin-right: 80%;
+} */
+              .disciplines__content-icon {
+                width: 50%;
+                max-width: 50%;
+                padding-right: 0;
+                padding-left: 0;
+                display: block;
+                @include push-auto;
+                margin-bottom: 2em;
+            }
+            }
+
+
+
+
+
+   @include mq("desktop-xl") {
             .howidoit__disciplines {
                 display: flex;
 
@@ -549,53 +649,111 @@
             }
 
             .howidoit__disciplines_content {
+                @include make-col-ready();
+                width: 20%;
+                max-width: 20%;
                 display: flex;
                 flex-direction: column;
                 flex: 0 0 auto;
-                width: 100%;
-                max-width: 20%;
                 align-items: normal;
                 justify-content: flex-start;
                 letter-spacing: 0;
+                height: 40em;
             }
 
-            .content1 {
-                /*  margin-left: auto; */
-                background: none;
-
-                h4 {
-                    @include vr($font-size: 1);
-
-                    width: unset;
-                    letter-spacing: 0;
-                }
-
-                .quote {
-                    display: none;
-                }
+            #title-col{
+                margin-right: 80%;
             }
-
-            .disciplines__content-icon {
-                width: 30%;
-                max-width: 30%;
+              .disciplines__content-icon {
+                width: 50%;
+                max-width: 50%;
                 padding-right: 0;
-                margin-bottom: -1rem;
+                padding-left: 0;
+                display: block;
+                @include push-auto;
+                margin-bottom: 2em;
+            }
             }
 
-            h5 {
-                @include vr($font-size: 1, $line-height: 1.25);
-            }
-
-            p {
-                @include vr($font-size: 1, $margin-top: 0.75, $line-height: 1.25);
-
-                font-style: normal;
-                letter-spacing: 0;
-                padding-right: 1.5rem;
-            }
+/* #disciplines__content_background--box1{background: $slate-shade-100;}
+#disciplines__content_background--box2{background: $slate-shade-200;}
+#disciplines__content_background--box3{background: $slate-shade-300;}
+#disciplines__content_background--box4{background: $slate-shade-400;}
+#disciplines__content_background--box5{background: $slate-shade-500;} */
+ 
+    .howidoit__disciplines_content--description{
+        %figure-text-lg, %figure-head-lg{
+        color: $slate-dark;
         }
     }
+
+.disciplines__content-icon {
+   .cls-3, .cls-4, .cls-1{
+    fill: $slate-dark;
 }
+}
+
+
+
+
+
+
+    #disciplines__content_background--box1:hover{
+        background: darken($slate-shade-100, 15%);
+    }
+    #disciplines__content_background--box2:hover{
+        background: darken($slate-shade-200, 15%);
+    }
+    #disciplines__content_background--box3:hover{
+            background: darken($slate-shade-300, 15%);
+    }
+    #disciplines__content_background--box4:hover{
+            background: darken($slate-shade-400, 15%);
+    }
+    #disciplines__content_background--box5:hover{    
+        background: darken($slate-shade-500, 15%);}
+        
+
+.howidoit__disciplines_content:hover{
+             cursor: pointer;
+        
+        .disciplines__content-icon{
+            .cls-3, .cls-4, .cls-1{
+            fill: $white;
+}
+}
+}            
+        
+  .howidoit__disciplines_content:hover{          
+    .howidoit__disciplines_content--description{
+        %figure-text-lg, %figure-head-lg{
+        color: $white;
+        }
+}
+}
+
+   
+
+
+        
+        
+
+
+
+  
+
+
+
+/*         .howidoit__disciplines_content:hover {
+    background: $tungsten;
+       
+
+    &,
+    & .cls-4, .cls-3, .cls-1 {
+        fill: #111;
+    }
+} */
+
 
 /* ////////////////////////////////////////////////////////////////////////// */
 /* //////////////////////       MY QUALIFICATIONS    /////////////////////////// */
@@ -604,6 +762,9 @@
 #my-qualifications {
     flex-direction: column;
 
+    h3{
+        @extend %subhead;
+    }
     h4 {
         @extend %display-text-lg;
     }
@@ -638,15 +799,38 @@
         margin-bottom: -6rem;
     }
 } */
+.content1{order:2}
+.content2{order:1}
 }
 
 
  hr{
- border-top: solid thick $slate;
+display: none;
+ border-top: solid .25em $slate;
+ height: 0;
 &:after{
 display: none;
 }
 }
+
+
+
+
+.quals svg{
+height: 10em;
+margin: 0 auto;
+display: block;
+@include mq('phone'){}
+@include mq('tablet'){
+height: 25em;
+}
+@include mq('desktop'){
+    height: 20em;
+}
+}
+
+
+
 
 
     .my-qualifications__stats {
@@ -669,7 +853,36 @@ display: none;
         padding: 2rem 0; */
         display: none;
     }
+
 .carousel-control-prev-icon,
+.carousel-control-next-icon {
+height: 2em;
+width: 2em;
+}
+
+#stats-slider > .carousel-inner{
+width: 90%;
+min-height: 10em;
+}
+
+#stats-slider{
+@include vr($margin-top: 3, $margin-bottom: 3);
+}
+
+ .carousel-control-next-icon{
+    right: 0;
+    margin-left: auto;
+ } 
+ .carousel-control-prev-icon{
+    left: 0;
+    margin-right: auto;
+ }
+  
+    
+
+
+
+/* .carousel-control-prev-icon,
 .carousel-control-next-icon {
   height: 100px;
   width: 100px;
@@ -691,7 +904,7 @@ display: none;
   content: '<';
   font-size: 55px;
   color: red;
-}
+} */
     // .stats {
     //     display: flex;
     //     flex-direction: column;
@@ -761,7 +974,6 @@ display: none;
 
 
 .carousel-inner{
- width: 100%;
  @include push-auto();
  display: flex;
  flex-direction: row;
@@ -774,8 +986,8 @@ display: none;
  @include make-col-ready();
  @include make-col(4);
  float: left;
- padding-left: 0px;
- padding-right: 0px;
+ padding-left: 15px;
+ padding-right: 15px;
 }
 
 #odd-stats{
