--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_my_expertise_page_articles_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_my_expertise_page_articles_styles.scss
@@ -35,9 +35,7 @@
 
 .skills{
     .link__advance--chevron{
-position: absolute;
-bottom: 0;
-left: 50%;
+position: relative;
 }
 }
 
@@ -123,76 +121,6 @@ flex: 0 0 auto;
 font-style: italic;
 @include vr($margin-top: 1);
 }     
-
-
-        
-
-/* .my-expertise__container__skills {
-    h3 {
-        @extend %subhead;
-        font-family: $font-family-sans-serif;
-        font-weight: 300;
-        font-weight: 400;
-        text-align: left;
-    p{
-    }
-
-    
-
-        text-align: center;
-    @media (min-width: 48em){
-    }
-}
-
-    font-family: $font-family-serif;
-    font-style: italic;
-p+p{
-}
-
-        @extend %display-text;
-    %display-text-text {
-
-            margin-left: auto;
-            margin-right: auto;
-            text-align: left;
-        @media (min-width: 48em){
-        }
-       max-width: ms(10.6);
-    }
-} */
-
-
-
-
-
-
-/* .overlay_content {
-    h3, p {}
-
-    h3 {
-    }
-} */
-
-
-
-/* #expt-overlay-4 {
-    h3 {
-        // background: $primary;
-        background: $tungsten;
-        border-radius: .25rem;
-        color: $slate;
-        letter-spacing: .025rem;
-    }
-//         border: thin solid $tungsten;
-//         color: $tungsten;
-
-    hr {
-        display: none;
-    }
-}
- */
-
-
 
 
 .overlay__content--icon {
