--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_templates/_core_layout_template.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_templates/_core_layout_template.scss
@@ -2,35 +2,28 @@
    @include left-middle();
    @include split-rows();
     h1 {
-        margin-top: auto;
-        flex: 0 0 auto;
         @extend .page__title;
        
     }
 
     h2 {
-        flex: 0 0 auto;
               @extend %headline;
 
     }
 
     h3 {
-        flex: 0 0 auto;
  /* 		@extend %display-text-lg;  */
  	@extend %subhead;
     }
 
     p {
-        flex: 0 0 auto;
-        margin-bottom: auto;
               @extend %display-text-lg;
 
     }
 
     .link{
-    	position: absolute;
+    	position: relative;
       // bottom: 20rem;
-      left: 50%;
       @include mq('tablet-wide'){
       	// bottom: 10rem;
       }
