--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
@@ -1,50 +1,4 @@
 // ==========================================================================
-// DIAGRAM CONTAINER / CONTENT
-// ==========================================================================
-
-/* .diagram {
-    // margin: $rvr-2 auto;
-    @include mq("tablet") {
-        // margin: $rvr-3 0;
-    }
-}
-
-.diagram-content {
-    padding: 0;
-
-    ol {
-        @include make-col-ready;
-        @include make-col(10);
-
-        @include mq("tablet-wide") {
-            width: 5%;
-            max-width: 5%;
-            flex: 0 0 0;
-        }
-    }
-} */
-
-// ==========================================================================
-// MODERNIZATION DIAGRAM
-// ==========================================================================
-
-.diagram__modern-marketing {
-    // @extend .diagram;
-}
-
-// .diagram-content > .icon {
-//         padding: 0;
-
-//         & .cls-1, .cls-2, .cls-3, .cls-4 {
-//             fill: $secondary;
-//         }
-//     }
-
-// ==========================================================================
-// DIAGRAM DISPLAY CONTROLS (HORZ VS VERT)
-// ==========================================================================
-
-// ==========================================================================
 // BUSINESS OBJECTIVES DIAGRAM
 // ==========================================================================
 
@@ -52,19 +6,7 @@
 // MUTUAL SETTINGS
 //
 
-.icon {
-    @include vr($width: 2);
 
-    & .cls-1, .cls-2, .cls-3, .cls-4 {
-        fill: $slate;
-    }
-}
-
-
-
-//
-// VERTICAL DIAGRAM
-//
 
 #objectives__diagram {
     @include make-row;
@@ -84,48 +26,37 @@
         max-width: 100%;
         width: 100%;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
     }
-
     .diagram-content {
         @include make-row;
- /*        width: 100%;
- max-width: 100%; */
         margin-left: 0px;
         margin-right: 0px;
         display: flex;
         flex-direction: row;
-        align-items: center;
-     /*    justify-content: center; */
-    
+        align-items: center;  
     ol {
-      /*   @include make-col-ready;
-      @include make-col(10); */
-///*         @include mq("tablet-wide") {
-//    width: 5%;
- //   max-width: 5%;
-//    flex: 0 0 0;
-//} */
-      
         margin-block-end: 0px;
         margin-block-start: 0px;
         list-style-position: inside;
         padding-inline-start: 0px;
+        -webkit-padding-start: 0px;
+        align-self: center;
+        @media (max-width: 25em){
+            margin-left: 2em;
+        }
+        // @include push-auto;
     }
-
-
     li {
-        // @include ms-respond(font-size, 2.5);
+
         @include vr($font-size: 2);
-
         padding-right: 0;
-
         @include mq("phone") {
             margin-left: 4rem;
         }
-
-
         @include mq("tablet") {
-            // @include ms-respond(font-size, 3);
+    
             margin-left: 2rem;
         }
 
@@ -139,28 +70,35 @@
     .icon, .objectives-offset {
         @include make-col-ready;
         @include make-col(4);
+        display: block;
     }
 
 
     @include mq("tablet-wide") {
         /*   display: none; */
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
             flex-direction: column;
             width: 23%;
             max-width: 23%;
             padding-left: 0px;
             padding-right: 0px;
             justify-content: center;
-
+            align-items: center;
+            // align-content: center;
+            flex: 0 0 auto;
 
         .objectives-offset{
             display: none;
         }
         .icon{
-       width: 90%;
-       max-width: 90%;
+        width: 80%;
+        max-width: 80%;
+        height: auto;
+        flex: 0 0 auto;
         }
+        
+    
         li{
             margin-left: 0;
             @include vr($font-size: 1.5);
@@ -169,135 +107,54 @@
 }
 
  @include mq('tablet-wide'){
-    #objectives__diagram_conclusion{
+    .my-value__conclusion{
             @include make-col-ready();
             @include make-col(12);
             padding-left: 0px;
             padding-right: 0px;
             align-items: flex-start;
 
-            p{
-                @include vr($font-size: 1, $line-height: 2, $width: 35);
-            }
+
 }
 }
 
-.delta--down, .delta--right {
-    & .cls-1 {
-        fill: $slate;
-    }
+
 }
 
-.objectives-diagram__delta-icon {
-    display: flex;
-    width: 2rem;
 
-    @include mq("tablet-wide") {
-        width: 1rem;
-    }
-}
-}
 
 
 /* .objectives-diagram__vertical--delta { */
-   .delta--down{
-    width: 2rem;
 
-    @include mq("tablet-wide") {
-        display: none;
-    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.diagram__end-to-end--vertical {
+
 }
 
-.delta--right{
-    display: none;
-
-    @include mq("tablet-wide") {
-    display: flex;
-    width: 1rem;
-    }
-}
 
 
 
 
 
 
-
-
-.disciplines__content-icon {
-    .cls-1, .cls-2 {
-        fill: $slate;
-    }
-
-    width: 50%;
-
-    @include mq("tablet") {
-        width: 40%;
-    }
-
-
-    @include mq("tablet-wide") {
-        width: 30%;
-    }
-
-
-    @include mq("desktop") {}
-}
-
-.diagram-content__end-to-end {
-    @include mq("tablet") {}
-}
-
-.diagram-content__end-to-end--vertical {
-    @include make-row;
-    @include make-col-ready;
-    @include make-col(12);
-
-    padding-left: 0px;
-    padding-right: 0px;
-    position: relative;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: 100%;
-    height: auto;
-}
-
-.end-to-end--vert {
-    width: 100%;
-}
-
-.diagram-content__caption--sticky {
-    @include vr($font-size: 1);
-    @include make-col-ready;
-    @include make-col(6);
-
-    // padding-top: $rvr-4;
-    // margin-bottom: $rvr-4;
-    padding-left: 7rem;
-    padding-right: 2rem;
-    position: sticky;
-    top: 40%;
-    left: 0;
-    height: 10rem;
-    font-family: $font-family-monospace;
-    align-self: flex-start;
-
-    // font-size: $ms-3_5;
-}
-
-.diagram-content__end-to-end-diagram--vert {
-    @include make-col-ready;
-    @include make-col(6);
-
-    padding-left: 0px;
-    padding-right: 0px;
-
-    @include mq("tablet") {
-        .end-to-end--vert {
-            width: 100%;
-        }
-    }
-}
 
 /* .diagram__modern-marketing {
     width: 100%;
@@ -338,13 +195,7 @@
     }
 }
 
-.competitive-advantage__svg {
-    width: 40em;
 
-    @include mq("tablet") {
-        width: 50em;
-    }
-}
 
 /* .diagram__competitive-advantage, .diagram__competitive-advantage #Layer_1 {
     .st0, .st8, .st12, .st13 {
