--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -5,7 +5,9 @@
 
 @import "theme/partials/mixins/bootstrap_mixins_override";
 @import "theme/partials/variables/theme_font_variables";
+// @import "theme/partials/navigation/navigation_import";
 @import "theme/partials/variables/theme_color_and_nav_variables";
+ // @import "theme/partials/variables/bootstrap_customized_variables"; 
 
 /* @import "theme/partials/variables/navbar_variables"; */
 @import "assets/bootstrap4";
