--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_container_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_container_styles.scss
@@ -19,8 +19,9 @@ width: 90%;
 .navbar>.container, .navbar>.container-fluid{
 	position: relative;
 	   margin: 0 auto;
-	width: 90%;
-	max-width: 90%;
+	width:100%;
+	max-width: 100%;
+	padding: 0 2em;
 }
 }
 
