--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
@@ -15,7 +15,7 @@ $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
-$gray-700: #495057 !default;
+$gray-700: rgba(73, 80, 87, .8) !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
@@ -172,6 +172,8 @@ $theme-colors: map-merge((
 $body-bg:						                $white;
 
 
+$navbar-padding:                    1em;
+
 
 //condensed menu nav-links
 $nav-link-padding-y:                2rem;
@@ -182,7 +184,7 @@ $nav-link-padding-x:                2rem;
 $navbar-nav-link-padding-y:			    unset;	
 $navbar-nav-link-padding-x:			    2rem;
 $navbar-brand-hover-text-decor:		  none;
-
+$navbar-nav-margin:                 0;
 $navbar-nav-background:				      rgba($black, .6);
 
 $navbar-background-color: 			    $black;
@@ -215,6 +217,32 @@ $carousel-control-color:            $slate;
 
 
 
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+) !default;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
+
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
+
+$grid-columns:                12 !default;
+$grid-gutter-width:           30px !default;
+
+
+$border-radius:               .25rem !default;
+$border-radius-lg:            .3rem !default;
+$border-radius-sm:            .2rem !default;
 
 
 
@@ -222,8 +250,9 @@ $carousel-control-color:            $slate;
 //
 // Dropdown menu container and contents.
 
-
-$dropdown-bg:                       $white !default;
+$dropdown-menu-a-color:             $white;
+$dropdown-bg:                       $black;
+$dropdown-menu-a-letterspacing:     .025em;
 $dropdown-border-color:             rgba($black, .15) !default;
 
 $dropdown-divider-bg:               $gray-200 !default;
@@ -243,7 +272,11 @@ $dropdown-item-padding-x:           1.5rem !default;
 $dropdown-header-color:             $gray-600 !default;
 
 
-$nav-link-disabled-color:           $gray-600 !default;
+
+
+/* 
+
+ $nav-link-disabled-color:           $gray-600 !default;
 
 $nav-tabs-border-color:             $gray-300 !default;
 
@@ -253,19 +286,62 @@ $nav-tabs-link-active-bg:           $body-bg  !default;
 $nav-tabs-link-active-border-color: $gray-300 $gray-300 $nav-tabs-link-active-bg !default;
 
 $navbar-toggler-padding-y:          .25rem    !default;
-$navbar-toggler-padding-x:          .75rem    !default;
+$navbar-toggler-padding-x:          .75rem    !default; */
 
-$navbar-height:                     4em;
-
-
+// $navbar-height:                     4em; 
 
 
+// Navs
 
+$nav-link-padding-y:                .5rem !default;
+$nav-link-padding-x:                1rem !default;
+$nav-link-disabled-color:           $gray-600 !default;
 
-/*///////////////// UNUSED BOOTSTRAP VARIABLES ////////////////*/
-/* 
+$nav-tabs-border-color:             $gray-300 !default;
+// $nav-tabs-border-width:             $border-width !default;
+$nav-tabs-border-radius:            $border-radius !default;
+$nav-tabs-link-hover-border-color:  $gray-200 $gray-200 $nav-tabs-border-color !default;
+$nav-tabs-link-active-color:        $gray-700 !default;
+$nav-tabs-link-active-bg:           $body-bg !default;
+$nav-tabs-link-active-border-color: $gray-300 $gray-300 $nav-tabs-link-active-bg !default;
+
+$nav-pills-border-radius:           $border-radius !default;
+/* $nav-pills-link-active-color:       $component-active-color !default;
+$nav-pills-link-active-bg:          $component-active-bg !default; */
+
 $nav-divider-color:                 $gray-200 !default;
+// $nav-divider-margin-y:              ($spacer / 2) !default;
 
-*/
+// Navbar
+
+// $navbar-padding-y:                  ($spacer / 2) !default;
+// $navbar-padding-x:                  $spacer !default;
+
+$navbar-nav-link-padding-x:         .5rem !default;
+
+// $navbar-brand-font-size:            $font-size-lg !default;
+// Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
+// $nav-link-height:                   ($font-size-base * $line-height-base + $nav-link-padding-y * 2) !default;
+// $navbar-brand-height:               $navbar-brand-font-size * $line-height-base !default;
+// $navbar-brand-padding-y:            ($nav-link-height - $navbar-brand-height) / 2 !default;
+
+$navbar-toggler-padding-y:          .25rem !default;
+$navbar-toggler-padding-x:          .75rem !default;
+// $navbar-toggler-font-size:          $font-size-lg !default;
+// $navbar-toggler-border-radius:      $btn-border-radius !default;
+
+$navbar-dark-color:                 rgba($white, .5) !default;
+$navbar-dark-hover-color:           rgba($white, .75) !default;
+$navbar-dark-active-color:          $white !default;
+$navbar-dark-disabled-color:        rgba($white, .25) !default;
+$navbar-dark-toggler-icon-bg:       str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-dark-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
+$navbar-dark-toggler-border-color:  rgba($white, .1) !default;
+
+$navbar-light-color:                rgba($black, .5) !default;
+$navbar-light-hover-color:          rgba($black, .7) !default;
+$navbar-light-active-color:         rgba($black, .9) !default;
+$navbar-light-disabled-color:       rgba($black, .3) !default;
+$navbar-light-toggler-icon-bg:      str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-light-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
+$navbar-light-toggler-border-color: rgba($black, .1) !default;
 
 
