--- a/wp-content/themes/understrap-child/sass/theme/partials_OLD/navigation/_navbar.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials_OLD/navigation/_navbar.scss
@@ -1,5 +1,3 @@
-
-
 // Contents
 //
 // Navbar
@@ -19,15 +17,12 @@
 
 .navbar {
   position: relative;
-  background: $navbar-background-color;
-  padding: $navbar-padding;
-
   display: flex;
   flex-wrap: wrap; // allow us to do the line break for collapsing content
   align-items: center;
   justify-content: space-between; // space out brand from logo
-/*   padding: $navbar-padding-y $navbar-padding-x; */
-    @extend .fixed-top;
+  padding: $navbar-padding-y $navbar-padding-x;
+
   // Because flex properties aren't inherited, we need to redeclare these first
   // few properities so that content nested within behave properly.
   > .container,
@@ -40,53 +35,23 @@
 }
 
 
-// #main-menu{
-//   margin: $collapsed-main-menu-margin;
-// li{
-//     padding: $collapsed-main-menu-li-padding;
-//   }
-// @include mq('tablet-wide'){
-//   margin: $expanded-main-menu-margin;
-//   li{
-//     padding: $expanded-main-menu-li-padding;
-//   }
-// }
-// }
-
 // Navbar brand
 //
 // Used for brand, project, or site names.
 
 .navbar-brand {
   display: inline-block;
-/*   padding-top: $navbar-brand-padding-y;
-padding-bottom: $navbar-brand-padding-y;
-margin-right: $navbar-padding-x; */
-/*   font-size: $navbar-brand-font-size; */
+  padding-top: $navbar-brand-padding-y;
+  padding-bottom: $navbar-brand-padding-y;
+  margin-right: $navbar-padding-x;
+  font-size: $navbar-brand-font-size;
   line-height: inherit;
   white-space: nowrap;
-  padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-    margin-right: 0;
-    font-size: inherit;
-     display:none; 
 
-@include mq('tablet'){
-    display: flex;
-}
-@include mq('tablet-wide'){
-         margin-left: 4rem;
-}
-}
-
-.navbar-brand:hover, .navbar-brand:focus{
-    text-decoration: $navbar-brand-hover-text-decor;
-    color: $navbar-brand-hover-color;
+  @include hover-focus {
+    text-decoration: none;
   }
-
-
+}
 
 
 // Navbar nav
@@ -97,15 +62,12 @@ margin-right: $navbar-padding-x; */
   display: flex;
   flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
   padding-left: 0;
-
+  margin-bottom: 0;
   list-style: none;
-       background: $navbar-nav-background;
-margin: $navbar-nav-margin;
 
   .nav-link {
     padding-right: 0;
     padding-left: 0;
-
   }
 
   .dropdown-menu {
@@ -147,7 +109,7 @@ margin: $navbar-nav-margin;
   padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
   font-size: $navbar-toggler-font-size;
   line-height: 1;
-  background-color: $toggler-background-color; // remove default button style
+  background-color: transparent; // remove default button style
   border: $border-width solid transparent; // remove default button style
   @include border-radius($navbar-toggler-border-radius);
 
@@ -165,17 +127,12 @@ margin: $navbar-nav-margin;
 // or image file as needed.
 .navbar-toggler-icon {
   display: inline-block;
-  width: 1.75em;
-  height: 1.75em;
+  width: 1.5em;
+  height: 1.5em;
   vertical-align: middle;
   content: "";
   background: no-repeat center center;
   background-size: 100% 100%;
-}
-
-.dropdown-menu a{
-  color: $dropdown-menu-a-color;
-  letter-spacing: $dropdown-menu-a-letterspacing;
 }
 
 // Generate series of `.navbar-expand-*` responsive classes for configuring
@@ -226,7 +183,6 @@ margin: $navbar-nav-margin;
 
         .navbar-toggler {
           display: none;
-
         }
       }
     }
@@ -271,14 +227,11 @@ margin: $navbar-nav-margin;
 
   .navbar-toggler {
     color: $navbar-light-color;
-    // background: $navbar-toggler-light-bg-color;
     border-color: $navbar-light-toggler-border-color;
   }
 
   .navbar-toggler-icon {
-.hamburger-icon-svg{
-fill: $navbar-light-hamburger-icon;
-  }
+    background-image: $navbar-light-toggler-icon-bg;
   }
 
   .navbar-text {
@@ -325,18 +278,13 @@ fill: $navbar-light-hamburger-icon;
   }
 
   .navbar-toggler {
-color: $navbar-dark-hamburger-icon;
-border-color: $navbar-dark-toggler-border-color;
-
+    color: $navbar-dark-color;
+    border-color: $navbar-dark-toggler-border-color;
   }
 
   .navbar-toggler-icon {
-background: none;
-.hamburger-icon-svg{
-
-fill: $navbar-dark-hamburger-icon;
+    background-image: $navbar-dark-toggler-icon-bg;
   }
-}
 
   .navbar-text {
     color: $navbar-dark-color;
@@ -349,67 +297,3 @@ fill: $navbar-dark-hamburger-icon;
     }
   }
 }
-
-
-
-.navbar-light .navbar-brand a {
-     color: $navbar-light-active-color;
-
-    @include hover-focus {
-      color: $navbar-light-active-color;
-    }
-}
-
-.navbar-dark .navbar-brand a {
-    color: $navbar-dark-active-color;
-
-    @include hover-focus {
-      color: $navbar-brand-hover-color;
-    }
-}
-
-
-/*///////////////////////     ADDITIONAL STYLING   ///////////////////*/
-.wrapper-navbar, .navbar{
-    top: 0;
-    width: 100%;
-    max-width: 100%;
-}
-
-
-svg#bug {
-    width: 4rem;
-    height: 4rem;
-    .st0 {
-        fill: $primary;
-    }
-    &:hover{
-      .st0{
-        fill: $navbar-all-text-hover-color;
-    }
-}
-}
-
-
-.custom-logo-link {
-    width: 3.5rem;
-    line-height: 1 !important;
-    vertical-align: baseline;
-    margin: 0;
-}
-
-
-//Nav-Link Hover Animation
-.nav-link {
-    @extend .hvr-underline-from-center;
-
-}
-
-
-
-.navbar__mail-link {}
-
-.navbar__call-link {
-     margin-left: 2rem; 
-}
-
